--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:context=".MainActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/txtArduino"
-        android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world"/>
 
 
-<Button
-    android:id="@+id/btnOn"
-    android:text="ON"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btnOn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="ON"/>
 
     <Button
         android:id="@+id/btnOff"
-        android:text="OFF"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="OFF"/>
 
 
 </LinearLayout>
