--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -9,24 +9,35 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <TextView
-        android:id="@+id/txtArduino"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"/>
-
-
     <Button
-        android:id="@+id/btnOn"
+        android:id="@+id/main_search_btn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="ON"/>
+        android:text="@string/main_search_btn"/>
 
     <Button
-        android:id="@+id/btnOff"
+        android:id="@+id/main_send_command_btn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="OFF"/>
+        android:text="@string/main_send_command_btn"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txtArduino"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hello_world"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </LinearLayout>
