--- a/Android/app/src/main/res/layout/content_search_devices.xml
+++ b/Android/app/src/main/res/layout/content_search_devices.xml
@@ -11,6 +11,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_search_devices"
-    tools:context="com.khmelenko.lab.bluetootharduino.SearchDevicesActivity">
+    tools:context="com.khmelenko.lab.bluetootharduino.activity.SearchDevicesActivity">
 
 </RelativeLayout>
