--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,7 @@
             <TextView
                 android:id="@+id/txtArduino"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/hello_world"/>
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
